--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- font awesome -->
-  <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 </head>
 
 <body>
@@ -82,7 +85,7 @@
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
-                            <i class="fas servicesIcon fa-mobile"></i>
+                            <i class="fa servicesIcon fa-mobile"></i>
                             <h4 class="card-title mt-3">Mobile Application Development</h4>
                             <p class="card-text mt-3">Our process for creating feature-rich applications begins with an understanding of client goals and requirements. These findings are transformed by our talented app developers into cutting-edge, user-focused mobile applications created just for your target audience. We provide several services for creating mobile applications.<br/>
                             - Android App Development<br/>
@@ -95,7 +98,7 @@
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
-                            <i class="fas servicesIcon fa-clock"></i>
+                            <i class="fa servicesIcon fa-clock-o"></i>
                             <h4 class="card-title mt-3">Website Development</h4>
                             <p class="card-text mt-3">Connate Technologies is a renowned web development agency catering to various industries. We offer tailored website development services.<br/>
                             - Custom Web Development<br/>
@@ -109,7 +112,7 @@
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
-                            <i class='fas servicesIcon fa-layer-group'></i>
+                            <i class='fa fa-users servicesIcon'></i>
                             <h4 class="card-title mt-3">IT Consulting Services</h4>
                             <p class="card-text mt-3">With developing technology, careful planning, and efficient IT strategy implementation, we supports you in your digital transformation path.</p>
                             <p>
@@ -123,7 +126,7 @@
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
-                            <i class='fas servicesIcon fa-search'></i>
+                            <i class='fa servicesIcon fa-search'></i>
                             <h4 class="card-title mt-3">iWatch & iWidget Developement</h4>
                             <p class="card-text mt-3"></p>
                             <p>We provide apps that help users live more present, healthy, and productive lives with  iWatch. With major improvements to the core experience and big changes to the platform, there's a lot to be excited about.</p>
@@ -135,7 +138,7 @@
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
-                            <i class='fas servicesIcon fa-shield-alt'></i>
+                            <i class='fa servicesIcon fa-shield'></i>
                             <h4 class="card-title mt-3">Cloud & DevOps</h4>
                             <p class="card-text mt-3">DevOps & Cloud computing consulting & infrastructure services provider offering expertise to create a robust application. Agile and Tailored Cloud Solutions For Every Business Type To Meet All The Requirements.<br/>
                             - AWS <br/>
@@ -150,7 +153,7 @@
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
-                            <i class='fas servicesIcon fa-wrench'></i>
+                            <i class='fa servicesIcon fa-wrench'></i>
                             <h4 class="card-title mt-3">QA</h4>
                             <p class="card-text mt-3">We bring value to your product and ensure it's secure, efficient, and trustworthy. We use different software testing and QA methodologies to provide accurate results.<br/>
                             - Functional Testing<br/>
@@ -188,7 +191,7 @@
                         <img class="card-img-top" src="images/food-app.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Food App</h4>
-                            <p class="card-text">Food delivery apps are third-party delivery services hosted on mobile applications that restaurants or retailers partner with to showcase their menu and food offerings, allowing customers to order food and get it delivered to their doorstep.Whether it's fast food or groceries, food delivery apps have revolutionized the restaurant and food delivery industry as they offer customers a convenient way to order food from the comfort of their homes.</p>
+                            <p class="card-text">Food delivery apps are third-party delivery services hosted on mobile applications that restaurants or retailers partner with to showcase their menu and food offerings, allowing customers to order food and get it delivered to their doorstep.Whether it's fat food or groceries, food delivery apps have revolutionized the restaurant and food delivery industry as they offer customers a convenient way to order food from the comfort of their homes.</p>
                         </div>
                     </div>
                 </div>
@@ -198,7 +201,7 @@
                         <img class="card-img-top" src="images/ecommerce-app.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">E-Commerce App</h4>
-                            <p class="card-text">App offers to deliver all your needs in just a few taps on your phone, at your desired location within 59 minutes! Utility of multiple hyperlocal delivery applications, everything strategically optimised in a single application; with a range of numerous products divided under 10 categories, alongside state of art UI enabling the user’s shopping experience to be easier & faster. It can be best utilised to fulfl B2C, B2B & C2C needs.</p>
+                            <p class="card-text">App offers to deliver all your needs in just a few taps on your phone, at your desired location within 59 minutes! Utility of multiple hyperlocal delivery applications, everything strategically optimised in a single application; with a range of numerous products divided under 10 categories, alongside state of art UI enabling the user’s shopping experience to be easier & fater. It can be best utilised to fulfl B2C, B2B & C2C needs.</p>
                         </div>
                     </div>
                 </div>
@@ -253,21 +256,21 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="info-box mb-4">
-                                        <i class="fas cnt-icon fa-map"></i>
+                                        <i class="fa cnt-icon fa-map"></i>
                                         <h3>Our Address</h3>
                                         <p>D-706 Vedant-2, Near Dwarkesh Farm, Vastral, Ahmedabad - India</p>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="info-box mb-4">
-                                        <i class="fas cnt-icon fa-envelope"></i>
+                                        <i class="fa cnt-icon fa-envelope"></i>
                                         <h3>Email Us</h3>
                                         <p>connatetechnologies@gmail.com</p>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="info-box mb-4">
-                                        <i class="fas cnt-icon fa-phone"></i>
+                                        <i class="fa cnt-icon fa-phone"></i>
                                         <h3>Call Us</h3>
                                         <p>+91 8758836661</p>
                                     </div>
